# buteo-syncfw

./: .gitignore  CMakeLists.txt  buteo-sync.pro
debian/: changelog
declarative/: CMakeLists.txt  declarative.pro  multisyncresultmodel.cpp  multisyncresultmodel.h  plugin.cpp  profileentry.h  syncmanager.cpp  syncmanager.h  syncprofilewatcher.cpp  syncprofilewatcher.h  syncresultmodel.cpp  syncresultmodel.h  syncresultmodelbase.cpp  syncresultmodelbase.h
doc/: CMakeLists.txt  Doxyfile  doc.pro
doc/src/: api-usage.dox  introduction.dox  plugin-guide.dox
libbuteosyncfw/: CMakeLists.txt  libbuteosyncfw.pro
libbuteosyncfw/clientfw/: SyncClientInterface.cpp  SyncClientInterface.h  SyncClientInterfacePrivate.cpp  SyncClientInterfacePrivate.h  SyncDaemonProxy.cpp  SyncDaemonProxy.h
libbuteosyncfw/common/: BtCommon.h  LogMacros.h  Logger.cpp  Logger.h  NetworkManager.cpp  NetworkManager.h  SyncCommonDefs.h  TransportTracker.cpp  TransportTracker.h  USBModedProxy.cpp
libbuteosyncfw/pluginmgr/: ClientPlugin.cpp  ClientPlugin.h  DeletedItemsIdStorage.cpp  DeletedItemsIdStorage.h  OOPClientPlugin.cpp  OOPClientPlugin.h  OOPServerPlugin.cpp  OOPServerPlugin.h  PluginCbInterface.h  PluginManager.cpp  PluginManager.h  ServerPlugin.cpp  ServerPlugin.h  StorageItem.cpp  StorageItem.h  StoragePlugin.cpp  StoragePlugin.h  SyncPluginBase.cpp  SyncPluginBase.h
libbuteosyncfw/profile/: BtHelper.cpp  BtHelper.h  Profile.cpp  Profile.h  ProfileEngineDefs.h  ProfileFactory.cpp  ProfileFactory.h  ProfileField.cpp  ProfileField.h  ProfileManager.cpp  ProfileManager.h  Profile_p.h  StorageProfile.cpp  StorageProfile.h  SyncLog.cpp  SyncLog.h  SyncProfile.cpp  SyncProfile.h  SyncResults.cpp  SyncResults.h  SyncSchedule.cpp  SyncSchedule.h  SyncSchedule_p.h  TargetResults.cpp  TargetResults.h
msyncd/: AccountsHelper.cpp  AccountsHelper.h  BackgroundSync.cpp  BackgroundSync.h  CMakeLists.txt  ClientPluginRunner.cpp  ClientPluginRunner.h  ClientThread.cpp  ClientThread.h  IPHeartBeat.cpp  IPHeartBeat.h  PluginRunner.cpp  PluginRunner.h  ServerActivator.cpp  ServerActivator.h  ServerPluginRunner.cpp  ServerPluginRunner.h  ServerThread.cpp  ServerThread.h  StorageBooker.cpp  StorageBooker.h  StorageChangeNotifier.cpp  StorageChangeNotifier.h  SyncAlarmInventory.cpp  SyncBackup.cpp  SyncBackup.h  SyncBackupAdaptor.h  SyncBackupProxy.h  SyncDBusAdaptor.cpp  SyncDBusAdaptor.h  SyncDBusInterface.h  SyncOnChange.cpp  SyncOnChange.h  SyncOnChangeScheduler.cpp  SyncQueue.cpp  SyncQueue.h  SyncScheduler.cpp  SyncScheduler.h  SyncSession.cpp  SyncSession.h  (+10 more)
oopp-runner/: ButeoPluginIfaceAdaptor.h  CMakeLists.txt  PluginCbImpl.cpp  PluginCbImpl.h  PluginServiceObj.cpp  main.cpp
rpm/: buteo-syncfw-qt5.spec  buteo-syncfw.spec  move-buteo-config.sh
unittests/: CMakeLists.txt  unittests.pro
unittests/dummyplugins/: CMakeLists.txt  dummyplugins.pro
unittests/dummyplugins/dummyclient/: CMakeLists.txt  dummyclient.pro
unittests/dummyplugins/dummyserver/: CMakeLists.txt  dummyserver.pro
unittests/dummyplugins/dummystorage/: CMakeLists.txt  dummystorage.pro
unittests/tests/: CMakeLists.txt  runstarget.sh  testapplication.cmake  tests.pro  tests.xml  tests_common.cmake  tests_common.pri
unittests/tests/msyncdtests/: AccountsHelperTest.cpp  AccountsHelperTest.h  CMakeLists.txt  ClientPluginRunnerTest.cpp  ServerActivatorTest.cpp  SyncSchedulerTest.cpp  SynchronizerTest.cpp  SynchronizerTest.h  TransportTrackerTest.cpp  msyncdtests.pro
unittests/tests/msyncdtests/AccountsHelperTest/: AccountsHelperTest.cpp
unittests/tests/msyncdtests/ClientPluginRunnerTest/: CMakeLists.txt
unittests/tests/msyncdtests/IPHeartBeatTest/: CMakeLists.txt
unittests/tests/msyncdtests/ServerActivatorTest/: CMakeLists.txt  ServerActivatorTest.cpp
unittests/tests/msyncdtests/ServerPluginRunnerTest/: CMakeLists.txt  ServerPluginRunnerTest.cpp
unittests/tests/msyncdtests/SyncBackupTest/: SyncBackupTest.cpp
unittests/tests/msyncdtests/SyncSessionTest/: SyncSessionTest.cpp
unittests/tests/msyncdtests/SyncSigHandlerTest/: SyncSigHandlerTest.cpp
unittests/tests/msyncdtests/TransportTrackerTest/: TransportTrackerTest.cpp  TransportTrackerTest.h
unittests/tests/pluginmanagertests/: CMakeLists.txt  ClientPluginTest.cpp  DeletedItemsIdStorageTest.cpp  ServerPluginTest.cpp  StoragePluginTest.cpp  StoragePluginTest.h  pluginmanagertests.pro
unittests/tests/pluginmanagertests/ClientPluginTest/: ClientPluginTest.h
unittests/tests/pluginmanagertests/DeletedItemsIdStorageTest/: DeletedItemsIdStorageTest.cpp
unittests/tests/pluginmanagertests/ServerPluginTest/: ServerPluginTest.h
unittests/tests/syncfwclienttests/: CMakeLists.txt  SyncClientInterfaceTest.cpp  SyncClientInterfaceTest.h  syncfwclienttestapplication.cmake  syncfwclienttests.pro
unittests/tests/syncfwclienttests/SyncClientInterfaceTest/: CMakeLists.txt
unittests/tests/syncprofiletests/: CMakeLists.txt  ProfileManagerTest.cpp  ProfileManagerTest.h  SyncProfileTest.cpp  SyncProfileTest.h  SyncScheduleTest.cpp
unittests/tests/syncprofiletests/ProfileFactoryTest/: CMakeLists.txt
unittests/tests/syncprofiletests/ProfileFieldTest/: ProfileFieldTest.cpp
unittests/tests/syncprofiletests/ProfileManagerTest/: ProfileManagerTest.cpp  ProfileManagerTest.h
unittests/tests/syncprofiletests/ProfileTest/: ProfileTest.cpp
unittests/tests/syncprofiletests/StorageProfileTest/: StorageProfileTest.cpp
unittests/tests/syncprofiletests/SyncLogTest/: SyncLogTest.cpp
unittests/tests/syncprofiletests/SyncProfileTest/: SyncProfileTest.cpp
unittests/tests/syncprofiletests/SyncScheduleTest/: SyncScheduleTest.cpp
