add_subdirectory(AccountsHelperTest)
add_subdirectory(ClientPluginRunnerTest)
add_subdirectory(ClientThreadTest)
add_subdirectory(PluginRunnerTest)
add_subdirectory(ServerActivatorTest)
add_subdirectory(ServerPluginRunnerTest)
add_subdirectory(ServerThreadTest)
add_subdirectory(StorageBookerTest)
add_subdirectory(SyncBackupTest)
add_subdirectory(SyncQueueTest)
add_subdirectory(SynchronizerTest)
add_subdirectory(TransportTrackerTest)
add_subdirectory(SyncSessionTest)
add_subdirectory(SyncSigHandlerTest)

if(NOT DEFINED USE_KEEPALIVE AND DEFINED USE_IPHB)
    add_subdirectory(IPHeartBeatTest)
    add_subdirectory(SyncSchedulerTest)
endif()
